# url-shortner

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  ca.pem  pyproject.toml  render.yaml  run_worker_dlq_replay.py
backend/src/: main.py
backend/src/core/: config.py  tracing.py
backend/src/events/: kafka.py
backend/src/log_utils/: __init__.py
backend/src/routes/: admin.py
backend/src/services/: geo_service.py
backend/src/workers/: _sni_patch.py  aggregation_worker.py  analytics_worker.py  cleanup_worker.py  dlq_replay_worker.py  expiry_worker.py  kafka_consumer_pool.py  metadata_worker.py  shutdown.py  webhook_click_consumer.py  webhook_retry_worker.py
backend/tests/: conftest.py
backend/tests/test_core/: conftest.py  test_base62.py  test_config.py  test_errors.py  test_rbac.py  test_security.py
backend/tests/test_resilience/: conftest.py
backend/tests/test_routes/: test_admin_routes.py  test_analytics_routes.py  test_audit_log_routes.py  test_billing_routes.py  test_bulk_routes.py  test_profile_routes.py  test_webhook_routes.py
docker/: docker-compose.yml
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  dashboard.spec.ts  fixtures.ts  urls.spec.ts  workspace.spec.ts
frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
frontend/src/app/(authenticated)/: layout.tsx
frontend/src/app/(authenticated)/admin/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/test/: admin-page.test.tsx  analytics-page.test.tsx  api-keys-page.test.tsx  audit-logs-page.test.tsx  auth-prefetcher.test.tsx  auth-store.test.ts  billing-page.test.tsx  bulk-page.test.tsx  components-extra.test.tsx  create-url-page.test.tsx  favorites-page.test.tsx  folders-page.test.tsx  hooks.test.ts  profile-page.test.tsx  providers.test.tsx  schemas.test.ts  sidebar.test.tsx  tags-page.test.tsx  token-cookie.test.ts  url-detail-page.test.tsx  urls-page.test.tsx  webhook-receiver-page.test.tsx  webhooks-page.test.tsx  workspaces-page.test.tsx
(+16 files in other folders)
