[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Treat the top-level `src/` directory as the package root.
# After `uv pip install -e .`, `from src.xxx import yyy` works everywhere.
packages = ["src"]

[project]
name = "backend"
version = "0.1.0"
description = "Enterprise URL Shortener API"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiokafka>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "fastavro>=1.12.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "beanie>=1.26,<2",
    "cryptography>=42.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "hashids>=1.3.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "qrcode[pil]>=8.2",
    "redis>=8.0.0",
    "upstash-redis>=1.0.0",
    "sqlalchemy>=2.0.50",
    "user-agents>=2.2.0",
    "uvicorn>=0.49.0",
    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-exporter-prometheus>=0.46b0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.1",
    "ruff>=0.4.0",
    "mongomock>=4.3.0",
    "mypy>=1.0.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E712"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]
"src/core/config.py" = ["N802"]
"src/core/deps.py" = ["E402"]
"src/errors/**" = ["N818"]
"src/workers/_sni_patch.py" = ["I001", "F841"]
"src/workers/webhook_retry_worker.py" = ["F401"]
